src/bms/parsing/parse.cpp
#include <functional>
#include <memory_resource>
#include <optional>
#include <vector>

#include "common/assert.hpp"
#include "common/result.hpp"

#include "bms/concrete_type.hpp"
#include "bms/diagnostic_consumer.hpp"
#include "bms/parsing/astp.hpp"
#include "bms/parsing/grammar.hpp"
#include "bms/parsing/parse.hpp"
#include "bms/tokenization/token.hpp"
#include "bms/tokenization/token_type.hpp"

namespace bit_manipulation::bms {

struct Parsed_Program::Implementation {
    std::pmr::vector<astp::Some_Node> nodes;
    std::string_view source;
    astp::Handle root_node = astp::Handle::null;

    explicit Implementation(std::string_view source, std::pmr::memory_resource* memory)
        : nodes(memory)
        , source(source)
    {
    }
};

Parsed_Program::Parsed_Program(std::string_view source, std::pmr::memory_resource* memory)
    : m_memory(memory)
    , m_impl(allocator().new_object<Implementation>(source, memory))
{
}

[[nodiscard]] Parsed_Program::Parsed_Program(Parsed_Program&& other) noexcept
    : m_memory(other.m_memory)
    , m_impl(std::exchange(other.m_impl, nullptr))
{
}

Parsed_Program& Parsed_Program::operator=(Parsed_Program&& other) noexcept
{
    Implementation* old = std::exchange(m_impl, std::exchange(other.m_impl, nullptr));
    if (old) {
        allocator().delete_object(old);
    }
    return *this;
}

Parsed_Program::~Parsed_Program()
{
    if (m_impl) {
        allocator().delete_object(m_impl);
    }
}

/// @brief Return the program source code.
[[nodiscard]] std::string_view Parsed_Program::get_source() const
{
    return m_impl->source;
}

/// @brief Returns a handle to the root node.
[[nodiscard]] astp::Handle Parsed_Program::get_root_handle() const
{
    return m_impl->root_node;
}

void Parsed_Program::set_root_handle(astp::Handle root)
{
    BIT_MANIPULATION_ASSERT(root != astp::Handle::null);
    m_impl->root_node = root;
}

/// @brief Returns the number of parsed AST nodes.
[[nodiscard]] Size Parsed_Program::get_node_count() const
{
    return m_impl->nodes.size();
}

astp::Some_Node& Parsed_Program::get_node(astp::Handle handle) &
{
    BIT_MANIPULATION_ASSERT(handle != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(static_cast<Size>(handle) < m_impl->nodes.size());
    return m_impl->nodes[static_cast<Size>(handle)];
}

const astp::Some_Node& Parsed_Program::get_node(astp::Handle handle) const&
{
    BIT_MANIPULATION_ASSERT(handle != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(static_cast<Size>(handle) < m_impl->nodes.size());
    return m_impl->nodes[static_cast<Size>(handle)];
}

[[nodiscard]] std::string_view Parsed_Program::extract(const Local_Source_Span& span) const
{
    return m_impl->source.substr(span.begin, span.length);
}

void Parsed_Program::downsize_nodes(Size n) &
{
    BIT_MANIPULATION_ASSERT(n <= m_impl->nodes.size());
    m_impl->nodes.erase(m_impl->nodes.begin() + std::ptrdiff_t(n), m_impl->nodes.end());
}

astp::Handle Parsed_Program::push_node(astp::Some_Node&& node) &
{
    const auto result = static_cast<astp::Handle>(m_impl->nodes.size());
    m_impl->nodes.push_back(std::move(node));
    return result;
}

std::pmr::polymorphic_allocator<> Parsed_Program::allocator() const
{
    return std::pmr::polymorphic_allocator<>(m_memory);
}

namespace {

/// @brief Tries to shrink the vector to fit the given size.
/// Unlike `std::vector::resize`, this does not require the type to be default-constructible.
/// @param vec the vector
/// @param size the desired size
/// @return `true` if `size <= vec.size()`, in which case the vector is resized.
template <typename T, typename Alloc>
bool try_downsize(std::vector<T, Alloc>& vec, typename std::vector<T, Alloc>::size_type size)
{
    if (size > vec.size()) {
        return false;
    }
    vec.erase(vec.begin() + static_cast<std::vector<T, Alloc>::difference_type>(size), vec.end());
    return true;
}

} // namespace

namespace astp {

Program::Program(Local_Source_Span pos, std::pmr::vector<astp::Handle>&& declarations)
    : Node_Base { pos }
    , declarations(std::move(declarations))
{
}

Function::Function(Local_Source_Span pos,
                   std::string_view name,
                   Handle annotations,
                   Handle parameters,
                   Handle return_type,
                   Handle requires_clause,
                   Handle body)
    : Node_Base { pos }
    , Parent<5> { annotations, parameters, return_type, requires_clause, body }
    , name(name)
{
    BIT_MANIPULATION_ASSERT(return_type != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(body != astp::Handle::null);
}

Parameter_List::Parameter_List(Local_Source_Span pos, std::pmr::vector<astp::Handle>&& parameters)
    : Node_Base { pos }
    , parameters((std::move(parameters)))
{
    for (auto h : parameters) {
        BIT_MANIPULATION_ASSERT(h != astp::Handle::null);
    }
}

Parameter::Parameter(Local_Source_Span pos, std::string_view name, Handle type)
    : Node_Base { pos }
    , Parent<1> { type }
    , name(name)
{
    BIT_MANIPULATION_ASSERT(type != astp::Handle::null);
}

Type::Type(Local_Source_Span pos, Type_Type type, Handle width)
    : Node_Base { pos }
    , Parent<1> { width }
    , type(type)
{
    BIT_MANIPULATION_ASSERT(type != Type_Type::Uint || width != Handle::null);
}

Const::Const(Local_Source_Span pos,
             std::string_view name,
             Handle annotations,
             Handle type,
             Handle initializer)
    : Node_Base { pos }
    , Parent<3> { annotations, type, initializer }
    , name(name)
{
    BIT_MANIPULATION_ASSERT(initializer != astp::Handle::null);
}

Let::Let(Local_Source_Span pos,
         std::string_view name,
         Handle annotations,
         Handle type,
         Handle initializer)
    : Node_Base { pos }
    , Parent<3> { annotations, type, initializer }
    , name(name)
{
    BIT_MANIPULATION_ASSERT(type != astp::Handle::null || initializer != astp::Handle::null);
}

Static_Assert::Static_Assert(Local_Source_Span pos, Handle expression)
    : Node_Base { pos }
    , Parent<1> { expression }
{
    BIT_MANIPULATION_ASSERT(expression != astp::Handle::null);
}

Annotation_List::Annotation_List(Local_Source_Span pos, std::pmr::vector<Handle>&& annotations)
    : Node_Base { pos }
    , annotations(std::move(annotations))
{
}

Annotation::Annotation(Local_Source_Span pos,
                       std::string_view name,
                       std::pmr::vector<Handle>&& arguments)
    : Node_Base { pos }
    , name { name }
    , arguments(std::move(arguments))
{
}

Annotation_Argument::Annotation_Argument(Local_Source_Span pos, std::string_view value)
    : Node_Base { pos }
    , value { value }
{
}

If_Statement::If_Statement(Local_Source_Span pos,
                           Handle condition,
                           Handle if_block,
                           Handle else_block)
    : Node_Base { pos }
    , Parent<3> { condition, if_block, else_block }
{
    BIT_MANIPULATION_ASSERT(condition != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(if_block != astp::Handle::null);
}

While_Statement::While_Statement(Local_Source_Span pos, Handle condition, Handle block)
    : Node_Base { pos }
    , Parent<2> { condition, block }
{
    BIT_MANIPULATION_ASSERT(condition != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(block != astp::Handle::null);
}

Break::Break(Local_Source_Span pos)
    : Node_Base { pos }
{
}

Continue::Continue(Local_Source_Span pos)
    : Node_Base { pos }
{
}

Return_Statement::Return_Statement(Local_Source_Span pos, Handle expression)
    : Node_Base { pos }
    , Parent<1> { expression }
{
}

Assignment::Assignment(Local_Source_Span pos,
                       std::string_view name,
                       Handle annotations,
                       Handle expression)
    : Node_Base { pos }
    , Parent<2> { annotations, expression }
    , name(name)
{
    BIT_MANIPULATION_ASSERT(expression != astp::Handle::null);
}

Block_Statement::Block_Statement(Local_Source_Span pos, std::pmr::vector<astp::Handle>&& statements)
    : Node_Base { pos }
    , statements(std::move(statements))
{
}

Conversion_Expression::Conversion_Expression(Local_Source_Span pos,
                                             Handle expression,
                                             Handle target_type)
    : Node_Base { pos }
    , Parent<2> { expression, target_type }
{
    BIT_MANIPULATION_ASSERT(expression != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(target_type != astp::Handle::null);
}

If_Expression::If_Expression(Local_Source_Span pos, Handle left, Handle condition, Handle right)
    : Node_Base { pos }
    , Parent<3> { left, condition, right }
{
    BIT_MANIPULATION_ASSERT(condition != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(left != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(right != astp::Handle::null);
}

Binary_Expression::Binary_Expression(Local_Source_Span pos,
                                     Handle left,
                                     Handle right,
                                     Token_Type op)
    : Node_Base { pos }
    , Parent<2> { left, right }
    , op(op)
{
    BIT_MANIPULATION_ASSERT(left != astp::Handle::null);
    BIT_MANIPULATION_ASSERT(right != astp::Handle::null);
}

Prefix_Expression::Prefix_Expression(Local_Source_Span pos, Token_Type op, Handle operand)
    : Node_Base { pos }
    , Parent<1> { operand }
    , op(op)
{
    BIT_MANIPULATION_ASSERT(operand != astp::Handle::null);
}

Function_Call_Expression::Function_Call_Expression(Local_Source_Span pos,
                                                   std::string_view function,
                                                   std::pmr::vector<astp::Handle>&& arguments,
                                                   bool is_statement)
    : Node_Base { pos }
    , function(function)
    , arguments(std::move(arguments))
    , is_statement(is_statement)
{
}

Id_Expression::Id_Expression(Local_Source_Span pos, std::string_view identifier)
    : Node_Base { pos }
    , identifier(identifier)
{
}

Literal::Literal(Local_Source_Span pos, std::string_view literal, Token_Type type)
    : Node_Base { pos }
    , literal(literal)
    , type(type)
{
}

} // namespace astp

namespace {

template <auto X>
constexpr decltype(X) const_array_one_v[1] = { X };

// Like `Parse_Error`, but without the `token` member because the parser keeps track of the token
// position anyway, and it's more convenient to not deal with it most of the time.
struct Rule_Error {
    Grammar_Rule rule;
    std::span<const Token_Type> expected_tokens;
};

struct Parser {
private:
    /// @brief The result program.
    Parsed_Program& m_program;
    /// @brief The input tokens.
    std::span<const Token> m_tokens;
    /// @brief The parser position within `m_tokens`.
    Size m_pos = 0;

public:
    explicit Parser(Parsed_Program& program, std::span<const Token> tokens)
        : m_program { program }
        , m_tokens { tokens }
    {
    }

    Result<void, Parse_Error> operator()()
    {
        if (auto program = match_program()) {
            m_program.set_root_handle(m_program.push_node(std::move(*program)));
            return {};
        }
        else {
            const auto fail_token = m_pos < m_tokens.size() ? m_tokens[m_pos] : Token {};
            const auto [fail_rule, expected_tokens] = program.error();
            return Parse_Error { fail_rule, expected_tokens, fail_token };
        }
    }

private:
    /// @brief Checks whether the parser is at the end of the file, in a way that respects comments.
    /// @return `true` if the parser has no more tokens to examine.
    [[nodiscard]] bool eof() noexcept
    {
        skip_comments();
        return m_pos == m_tokens.size();
    }

    void skip_comments() noexcept
    {
        while (m_pos != m_tokens.size() && is_comment(m_tokens[m_pos].type)) {
            m_pos += 1;
        }
    }

    template <std::invocable<Token_Type> Predicate>
    const Token* peek_or_expect(Predicate p, bool increment) noexcept
    {
        if (const Token* next = peek(); next && p(next->type)) {
            m_pos += increment;
            return next;
        }
        return nullptr;
    }

    /// @brief Returns the next token if there is one, without advancing the parser.
    /// If there is no next token (end of file), `nullptr` is returned.
    /// @return The next token or `nullptr`.
    [[nodiscard]] const Token* peek() noexcept
    {
        return !eof() ? &m_tokens[m_pos] : nullptr;
    }

    /// @brief Returns the n-th next token if there is one, without advancing the parser.
    /// `peek_n(0)` is equivalent to `peek()`.
    /// @param lookahead the amount of nodes to look ahead
    /// @return The n-th next token or `nullptr`.
    [[nodiscard]] const Token* peek_n(Size lookahead) noexcept
    {
        const Size restore = m_pos;
        const Token* result;
        for (Size i = 0; i <= lookahead; ++i, ++m_pos) {
            result = peek();
            if (!result) {
                break;
            }
        }
        m_pos = restore;
        return result;
    }

    /// @return `peek() && peek() == expected ? peek() : nullptr`.
    const Token* peek(Token_Type expected) noexcept
    {
        return peek_or_expect([=](Token_Type t) { return t == expected; }, false);
    }

    /// @return `peek() && predicate(peek()->type) ? peek() : nullptr`.
    const Token* peek(bool (&predicate)(Token_Type)) noexcept
    {
        return peek_or_expect(predicate, false);
    }

    /// @brief Checks whether the next token (if any) equals the expected type.
    /// If so, the parser advances by one token.
    /// Otherwise, does nothing and returns `nullptr`.
    /// @param type the expected type
    /// @return The popped token with the given type, or `nullptr` if there is no token, or the
    /// token doesn't match the expected type.
    const Token* expect(Token_Type type) noexcept
    {
        return peek_or_expect([=](Token_Type t) { return t == type; }, true);
    }

    const Token* expect(bool (&predicate)(Token_Type)) noexcept
    {
        return peek_or_expect(predicate, true);
    }

    using Rule_Result = Result<astp::Some_Node, Rule_Error>;

    struct Scoped_Attempt {
        Parser& self;
        const Size pos;
        const Size node_count;

        explicit Scoped_Attempt(Parser& self)
            : self(self)
            , pos(self.m_pos)
            , node_count(self.m_program.get_node_count())
        {
        }

        ~Scoped_Attempt() noexcept(false)
        {
            BIT_MANIPULATION_ASSERT(self.m_pos >= pos);
            BIT_MANIPULATION_ASSERT(self.m_program.get_node_count() >= node_count);
            self.m_pos = pos;
            self.m_program.downsize_nodes(node_count);
        }
    };

    Scoped_Attempt start_attempt()
    {
        return Scoped_Attempt { *this };
    }

    Rule_Result match_program()
    {
        auto first = match_program_declaration();
        if (!first) {
            return first;
        }
        std::pmr::vector<astp::Handle> declarations(m_program.get_memory());
        declarations.push_back(m_program.push_node(std::move(*first)));

        while (!eof()) {
            auto d = match_program_declaration();
            if (!d) {
                return d;
            }
            declarations.push_back(m_program.push_node(std::move(*d)));
        }
        return astp::Some_Node { astp::Program { get_source_position(*first),
                                                 std::move(declarations) } };
    }

    Rule_Result match_program_declaration()
    {
        static constexpr Token_Type expected[]
            = { Token_Type::keyword_const, Token_Type::keyword_function,
                Token_Type::keyword_static_assert };

        if (peek(Token_Type::keyword_const)) {
            return match_const_declaration();
        }
        if (peek(Token_Type::keyword_function)) {
            return match_function_declaration();
        }
        if (peek(Token_Type::keyword_static_assert)) {
            return match_static_assertion();
        }
        return Rule_Error { Grammar_Rule::program_declaration, expected };
    }

    Result<std::optional<astp::Some_Node>, Rule_Error>
    optionally_match(Rule_Result (Parser::*match)(), bool condition)
    {
        BIT_MANIPULATION_ASSERT(match);
        if (!condition) {
            return std::optional<astp::Some_Node> {};
        }
        auto result = (this->*match)();
        if (!result) {
            return result.error();
        }
        return std::optional<astp::Some_Node> { std::move(*result) };
    }

    astp::Handle push_or_null(std::optional<astp::Some_Node>&& node)
    {
        return node ? m_program.push_node(std::move(*node)) : astp::Handle::null;
    }

    Rule_Result match_let_declaration()
    {
        const auto this_rule = Grammar_Rule::let_declaration;

        auto annotations
            = optionally_match(&Parser::match_annotation_sequence, peek(Token_Type::at));
        if (!annotations) {
            return annotations.error();
        }

        const Token* t = expect(Token_Type::keyword_let);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_let> };
        }
        const Token* id = expect(Token_Type::identifier);
        if (!id) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::identifier> };
        }
        const std::string_view name = m_program.extract(id->pos);

        // TODO: refactor to match_and_push_if
        auto type_handle = astp::Handle::null;
        if (expect(Token_Type::colon)) {
            if (auto type = match_type()) {
                type_handle = m_program.push_node(std::move(*type));
            }
            else {
                return type;
            }
        }
        // TODO: refactor to match_and_push_if
        auto init_handle = astp::Handle::null;
        if (type_handle == astp::Handle::null || peek(Token_Type::assign)) {
            auto init = match_initializer();
            if (!init) {
                return init;
            }
            init_handle = m_program.push_node(std::move(*init));
        }

        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return astp::Some_Node { astp::Let { t->pos, name, push_or_null(std::move(*annotations)),
                                             type_handle, init_handle } };
    }

    Rule_Result match_const_declaration()
    {
        const auto this_rule = Grammar_Rule::const_declaration;

        auto annotations
            = optionally_match(&Parser::match_annotation_sequence, peek(Token_Type::at));
        if (!annotations) {
            return annotations.error();
        }

        const Token* t = expect(Token_Type::keyword_const);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_const> };
        }
        const Token* id = expect(Token_Type::identifier);
        if (!id) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::identifier> };
        }
        const std::string_view name = m_program.extract(id->pos);

        // TODO: refactor with match_and_push_if
        auto type_handle = astp::Handle::null;
        if (expect(Token_Type::colon)) {
            if (auto type = match_type()) {
                type_handle = m_program.push_node(std::move(*type));
            }
            else {
                return type;
            }
        }
        auto init = match_initializer();
        if (!init) {
            return init;
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return astp::Some_Node { astp::Const { t->pos, name, push_or_null(std::move(*annotations)),
                                               type_handle,
                                               m_program.push_node(std::move(*init)) } };
    }

    Rule_Result match_initializer()
    {
        constexpr auto this_rule = Grammar_Rule::initializer;
        if (!expect(Token_Type::assign)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::assign> };
        }
        return match_expression();
    }

    Rule_Result match_function_declaration()
    {
        constexpr auto this_rule = Grammar_Rule::function_declaration;

        auto annotations
            = optionally_match(&Parser::match_annotation_sequence, peek(Token_Type::at));
        if (!annotations) {
            return annotations.error();
        }

        const Token* t = expect(Token_Type::keyword_function);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_function> };
        }
        const Token* name = expect(Token_Type::identifier);
        if (!name) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::identifier> };
        }
        if (!expect(Token_Type::left_parenthesis)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::left_parenthesis> };
        }

        // TODO: refactor to match_and_push_if
        auto parameters = astp::Handle::null;
        if (!peek(Token_Type::right_parenthesis)) {
            // By first checking whether there is no right parenthesis, we can ensure that there
            // must be parameters.
            // This is not strictly necessary, but leads to improved diagnostics because we can
            // commit to parsing the parameters.
            auto r = match_parameter_sequence();
            if (!r) {
                return r;
            }
            parameters = m_program.push_node(std::move(*r));
        }

        if (!expect(Token_Type::right_parenthesis)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::right_parenthesis> };
        }
        if (!expect(Token_Type::right_arrow)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::right_arrow> };
        }
        auto ret = match_type();
        if (!ret) {
            return ret;
        }
        // TODO: refactor to match_and_push_if
        auto requires_handle = astp::Handle::null;
        if (peek(Token_Type::keyword_requires)) {
            if (auto req = match_requires_clause()) {
                requires_handle = m_program.push_node(std::move(*req));
            }
            else {
                return req;
            }
        }
        auto body = match_block_statement();
        if (!body) {
            return body;
        }
        return astp::Some_Node { astp::Function {
            t->pos, m_program.extract(name->pos), //
            push_or_null(std::move(*annotations)), parameters, m_program.push_node(std::move(*ret)),
            requires_handle, m_program.push_node(std::move(*body)) } };
    }

    Rule_Result match_parameter_sequence()
    {
        Local_Source_Span first_pos;
        std::pmr::vector<astp::Handle> parameters(m_program.get_memory());
        while (true) {
            auto p = match_parameter();
            if (!p) {
                return p;
            }
            first_pos = get<astp::Parameter>(*p).pos;
            parameters.push_back(m_program.push_node(std::move(*p)));
            if (!expect(Token_Type::comma)) {
                break;
            }
        }
        BIT_MANIPULATION_ASSERT(!parameters.empty());

        return astp::Some_Node { astp::Parameter_List { first_pos, std::move(parameters) } };
    }

    Rule_Result match_parameter()
    {
        constexpr auto this_rule = Grammar_Rule::parameter;
        const Token* id = expect(Token_Type::identifier);
        if (!id) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::identifier> };
        }
        if (!expect(Token_Type::colon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::colon> };
        }
        auto type = match_type();
        if (!type) {
            return type;
        }
        return astp::Some_Node { astp::Parameter { id->pos, m_program.extract(id->pos),
                                                   m_program.push_node(std::move(*type)) } };
    }

    Rule_Result match_static_assertion()
    {
        constexpr auto this_rule = Grammar_Rule::static_assertion;
        const Token* t = expect(Token_Type::keyword_static_assert);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_static_assert> };
        }
        auto expression = match_parenthesized_expression();
        if (!expression) {
            return expression;
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return astp::Some_Node { astp::Static_Assert {
            t->pos, m_program.push_node(std::move(*expression)) } };
    }

    Rule_Result match_requires_clause()
    {
        constexpr auto this_rule = Grammar_Rule::requires_clause;
        const Token* t = expect(Token_Type::keyword_requires);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_requires> };
        }
        return match_expression();
    }

    Rule_Result match_annotation_sequence()
    {
        Local_Source_Span first_pos;
        std::pmr::vector<astp::Handle> annotations(m_program.get_memory());
        while (true) {
            auto annotation = match_annotation();
            if (!annotation) {
                return annotation;
            }
            first_pos = get<astp::Annotation>(*annotation).pos;
            annotations.push_back(m_program.push_node(std::move(*annotation)));
            if (!peek(Token_Type::at)) {
                break;
            }
        }
        BIT_MANIPULATION_ASSERT(!annotations.empty());

        return astp::Some_Node { astp::Annotation_List { first_pos, std::move(annotations) } };
    }

    Rule_Result match_annotation()
    {
        constexpr auto this_rule = Grammar_Rule::annotation;
        const Token* at = expect(Token_Type::at);
        if (!expect(Token_Type::at)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::at> };
        }
        const Token* id = expect(Token_Type::identifier);
        if (!id) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::identifier> };
        }

        auto arguments = [&]() -> Result<std::pmr::vector<astp::Handle>, Rule_Error> {
            if (!expect(Token_Type::left_parenthesis) || expect(Token_Type::right_parenthesis)) {
                return std::pmr::vector<astp::Handle>(m_program.get_memory());
            }
            auto r = match_annotation_argument_sequence();
            if (r && !expect(Token_Type::right_parenthesis)) {
                return Rule_Error { this_rule, const_array_one_v<Token_Type::right_parenthesis> };
            }
            return r;
        }();
        return astp::Some_Node { astp::Annotation { at->pos, m_program.extract(id->pos),
                                                    std::move(*arguments) } };
    }

    Result<std::pmr::vector<astp::Handle>, Rule_Error> match_annotation_argument_sequence()
    {
        std::pmr::vector<astp::Handle> arguments(m_program.get_memory());
        while (true) {
            auto argument = match_annotation_argument();
            if (!argument) {
                return argument.error();
            }
            arguments.push_back(m_program.push_node(std::move(*argument)));
            if (!expect(Token_Type::comma)) {
                break;
            }
        }
        BIT_MANIPULATION_ASSERT(!arguments.empty());

        return arguments;
    }

    Rule_Result match_annotation_argument()
    {
        constexpr auto this_rule = Grammar_Rule::annotation_argument;
        static constexpr Token_Type expected[]
            = { Token_Type::binary_literal, Token_Type::octal_literal, Token_Type::decimal_literal,
                Token_Type::hexadecimal_literal };

        const Token* t = expect(is_integer_literal);
        if (t) {
            return Rule_Error { this_rule, expected };
        }
        return astp::Some_Node { astp::Annotation_Argument { t->pos, m_program.extract(t->pos) } };
    }

    Rule_Result match_statement()
    {
        constexpr auto this_rule = Grammar_Rule::statement;
        // This is a manually computed FIRST set of the statement rule.
        static constexpr Token_Type possible_types[] = { Token_Type::keyword_let,
                                                         Token_Type::keyword_const,
                                                         Token_Type::keyword_static_assert,
                                                         Token_Type::keyword_break,
                                                         Token_Type::keyword_continue,
                                                         Token_Type::keyword_return,
                                                         Token_Type::keyword_if,
                                                         Token_Type::keyword_while,
                                                         Token_Type::left_brace,
                                                         Token_Type::identifier };

        if (const Token* t = peek()) {
            switch (t->type) {
            case Token_Type::keyword_let: return match_let_declaration();
            case Token_Type::keyword_const: return match_const_declaration();
            case Token_Type::keyword_static_assert: return match_static_assertion();
            case Token_Type::keyword_break: return match_break_statement();
            case Token_Type::keyword_continue: return match_continue_statement();
            case Token_Type::keyword_return: return match_return_statement();
            case Token_Type::keyword_if: return match_if_statement();
            case Token_Type::keyword_while: return match_while_statement();
            case Token_Type::left_brace: return match_block_statement();
            case Token_Type::identifier: {
                if (const Token* lookahead = peek_n(1);
                    lookahead && lookahead->type == Token_Type::assign) {
                    return match_assignment_statement();
                }
                auto r = match_function_call_statement();
                if (!r) {
                    return r;
                }
                get<astp::Function_Call_Expression>(*r).is_statement = true;
                return r;
            }
            default: break;
            }
        }

        return Rule_Error { this_rule, possible_types };
    }

    Rule_Result match_assignment_statement()
    {
        constexpr auto this_rule = Grammar_Rule::assignment_statement;
        auto a = match_assignment();
        if (!a) {
            return a;
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return a;
    }

    Rule_Result match_function_call_statement()
    {
        constexpr auto this_rule = Grammar_Rule::function_call_statement;
        auto call = match_function_call_expression();
        if (!call) {
            return call;
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return call;
    }

    Rule_Result match_assignment()
    {
        constexpr auto this_rule = Grammar_Rule::assignment;

        auto annotations
            = optionally_match(&Parser::match_annotation_sequence, peek(Token_Type::at));
        if (!annotations) {
            return annotations.error();
        }

        const Token* id = expect(Token_Type::identifier);
        if (!id) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::identifier> };
        }
        if (!expect(Token_Type::assign)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::assign> };
        }
        auto e = match_expression();
        if (!e) {
            return e;
        }
        return astp::Some_Node { astp::Assignment { id->pos, m_program.extract(id->pos),
                                                    push_or_null(std::move(*annotations)),
                                                    m_program.push_node(std::move(*e)) } };
    }

    Rule_Result match_return_statement()
    {
        constexpr auto this_rule = Grammar_Rule::return_statement;
        const Token* t = expect(Token_Type::keyword_return);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_return> };
        }
        if (expect(Token_Type::semicolon)) {
            return astp::Some_Node { astp::Return_Statement { t->pos, astp::Handle::null } };
        }
        auto e = match_expression();
        if (!e) {
            return e;
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return astp::Some_Node { astp::Return_Statement { t->pos,
                                                          m_program.push_node(std::move(*e)) } };
    }

    Rule_Result match_break_statement()
    {
        constexpr auto this_rule = Grammar_Rule::break_statement;
        const Token* t = expect(Token_Type::keyword_break);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_break> };
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return astp::Some_Node { astp::Break { t->pos } };
    }

    Rule_Result match_continue_statement()
    {
        constexpr auto this_rule = Grammar_Rule::continue_statement;
        const Token* t = expect(Token_Type::keyword_continue);
        if (!t) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_continue> };
        }
        if (!expect(Token_Type::semicolon)) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::semicolon> };
        }
        return astp::Some_Node { astp::Continue { t->pos } };
    }

    Rule_Result match_if_statement()
    {
        const auto this_rule = Grammar_Rule::if_statement;

        const Token* first = expect(Token_Type::keyword_if);
        if (!first) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_if> };
        }
        auto condition = match_expression();
        if (!condition) {
            return condition;
        }
        auto block = match_block_statement();
        if (!block) {
            return block;
        }
        auto else_handle = astp::Handle::null;
        if (peek(Token_Type::keyword_else)) {
            auto r = match_else_statement();
            if (!r) {
                return r.error();
            }
            else_handle = m_program.push_node(std::move(*r));
        }
        return astp::Some_Node { astp::If_Statement {
            first->pos, m_program.push_node(std::move(*condition)),
            m_program.push_node(std::move(*block)), else_handle } };
    }

    Rule_Result match_else_statement()
    {
        const auto this_rule = Grammar_Rule::else_statement;

        const Token* first = expect(Token_Type::keyword_else);
        if (!first) {
            return Rule_Error { this_rule, const_array_one_v<Token_Type::keyword_else> };
        }
        return peek(Token_Type::keyword_if) ? match_if_statement() : match_block_statement();
    }

    Rule_Result match_while_statement()
    {
        const auto this_rule = Grammar_Rule::while_statement;
